<resources>
    <string name="app_name">CleaningService</string>
    <string name="login_activity_email_label">Email:</string>
    <string name="login_activity_email_edittext">Enter login</string>
    <string name="login_activity_password_label">Password:</string>
    <string name="login_activity_password_edittext">Enter password</string>
    <string name="login_activity_button_login">Log In</string>
    <string name="login_activity_button_register">Sign Up</string>
    <string name="wrong_data_error">Check data</string>
    <string name="cant_login">Can\'t perform login action</string>
    <string name="appKey">d09ddf33d9d540ebbcd8eb738a5ff1d6</string>
    <string name="clientKey">9f27eaf9dd7742bb972c048525afdb08</string>
    <string name="masterKey">0952dd1a84fb4c41989634ad858fc6de</string>
    <string name="collectionNameCleaners">cleaners</string>
    <string name="cleaners">Cleaners:</string>
    <string name="documentName">DocumentName:</string>
    <string name="documentId">Document id:</string>
    <string name="fieldContactPhone">contactPhone</string>
    <string name="fieldAddress">address</string>
    <string name="fieldOrderPrice">orderPrice</string>
    <string name="errorDuringDocumentLoading">Can\'t load document list</string>
    <string name="addDocument">Add document</string>
    <string name="login_activity_password_repeat_edittext">Repeat password</string>
    <string name="login_activity_repeat_password_label">Repeat password</string>
    <string name="login_activity_user_name_label">User name:</string>
    <string name="login_activity_user_name_edittext">Enter user name</string>
    <string name="errorDuringRegister">Error during register process.</string>
    <string name="notMatchPasswords">Passwords are not match</string>
    <string name="documentContent">Document content:</string>
    <string name="documentComment">Document comment:</string>
    <string name="add_new_document">Add new document</string>
    <string name="enter_document_name">Enter document name</string>
    <string name="enter_document_content">Enter document content</string>
    <string name="enter_document_comment">Enter document comment</string>
    <string name="cleanerNameField">CleanerName</string>
    <string name="cleanerPhotoUrl">CleanerPhotoUrl</string>
    <string name="cleanerDescription">CleanerDescription</string>
    <string name="document_saved">Document saved successful</string>
    <string name="error_during_document_saving">Error during saving</string>
    <string name="will_be_created_automatically">Will be created automatically</string>
    <string name="choose_action">Choose action</string>
    <string name="open_document">Open document</string>
    <string name="edit_document">Edit document</string>
    <string name="remove_document">Remove document</string>
    <string name="decument_removed">Document removed successful</string>
    <string name="error_during_doc_removal">Error during document removal</string>
    <string name="close_action">Close</string>
    <string name="continue_action">Continue</string>
    <string name="no_item_selected">No item selected</string>
    <string name="change_document_info">Change</string>
    <string name="cleanservice">Cleaning Service</string>
    <string name="price_for_cleaning">Price for cleaning</string>
    <string name="currency_sign">$</string>
    <string name="tell_us_about_your">Tell us about your</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="amount_of_bedrooms">Amount of\nbedrooms:</string>
    <string name="amount_of_bathrooms">Amount of\nbathrooms:</string>
    <string name="area_in_square_foots">Area in Square foots:</string>
    <string name="enter_size_of_your_house_in_square_foots">Enter size of your house in square foots</string>
    <string name="make_an_order">Make an order</string>
    <string name="you_live_in">You live in:</string>
    <string name="your_address">Your address:</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="collectionNameOrders">orders</string>
    <string name="userIdField">userId</string>
    <string name="addressField">address</string>
    <string name="sizeInSquareFootsField">sizeInSquareFoots</string>
    <string name="numberOfBedroomsField">numberOfBedrooms</string>
    <string name="numberOfBathroomsField">numberOfBathrooms</string>
    <string name="userNameField">userName</string>
    <string name="shared_prefs_userinfo">com.peterstaranchuk.cleaningservice.user_info</string>
    <string name="shared_prefs_key_username">com.peterstaranchuk.cleaningservice.USERNAME</string>
    <string name="shared_prefs_key_user_email">com.peterstaranchuk.cleaningservice.EMAIL</string>
    <string name="shared_prefs_key_userid">com.peterstaranchuk.cleaningservice.USERID</string>
    <string name="fieldUsername">username</string>
    <string name="cant_calculate_price">Can\'t calculate the price</string>
    <string name="orderSending">Order place in process</string>
    <string name="orderSentTitle">Order sent</string>
    <string name="ok">OK</string>
    <string name="orderSentMessage">Order successfully sent. Our managers will call you soon.</string>
    <string name="errorWhileSendingTitle">Error</string>
    <string name="errorWhileSendingMessage">Error while sending process</string>
    <string name="menu_item_orders">Orders</string>
    <string name="menu_item_cleaners">Cleaners</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="order_item_number">Order number:</string>
    <string name="order_item_placed_at">Placed at:</string>
    <string name="order_item_status">Order status:</string>
    <string name="createdAtField">createdAt</string>
    <string name="feedback_label_text">Thanks for your feedback. You can tell us about application. About features you need in app and about our cleaners. Let\'s keep in touch.</string>
    <string name="feedback_hint">Please, write your feedback here</string>
    <string name="collectionNameFeedback">feedback</string>
    <string name="feedbackTextField">feedbackText</string>
    <string name="feedback_sent">Feedback sent</string>
    <string name="error_during_feedback_sending">Error during feedback sending</string>
    <string name="orderActivity">Order</string>
    <string name="ordersList">Orders list</string>
    <string name="registerActivityTitle">Register</string>
    <string name="cleanerListActivityTitle">Our cleaners</string>
    <string name="cleanersInfoActivityTitle">Cleaner info</string>
    <string name="loginScreenTitle">Login</string>
    <string name="status_placed">Placed</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_inprogress">in progress</string>
    <string name="status_completed">completed</string>
    <string name="status_error">can\'t get status. Please, call to our office.</string>
    <string name="isEmployeeField">isEmployee</string>
    <string name="user_registered">User registered succsessfull</string>
    <string name="orderPriceField">orderPrice</string>
    <string name="phone">Contact phone:</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="login">Login</string>
    <string name="contactPhone">contactPhone</string>
    <string name="fieldEmail">email</string>
    <string name="hello">Hello</string>
    <string name="removeOrder">Remove order</string>
    <string name="area">Area:</string>
    <string name="numberOfBathrooms">Number of bathrooms:</string>
    <string name="numberOfBedrooms">Number of bedrooms:</string>
    <string name="textUserPhone">Contact phone:</string>
    <string name="textUserAddress">Address:</string>
    <string name="order_price">Price:</string>
    <string name="placed_at">Placed at:</string>
    <string name="textOrderStatus">Order status:</string>
    <string name="sqft">sqrt</string>
    <string name="currencySign">$</string>
    <string name="fieldCreatedAt">createdAt</string>
    <string name="fieldOrderStatus">orderStatus</string>
    <string name="fieldArea">sizeInSquareFoots</string>
    <string name="orderStatusField">orderStatus</string>
    <string name="errorDuringOrderDeletion">Can\'t delete order. Try again later</string>
    <string name="warrant">WARRANT</string>
    <string name="warrant_delete_order">Are you sure you want to delete this order?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="orderDetailsTitle">Order details</string>
</resources>
