<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnMakeAnOrder"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_live_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvControlHouse"
                        style="@style/controlLabelStyle"
                        android:layout_weight="1"
                        android:background="@drawable/control_border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/controlsPadding"
                        android:paddingTop="@dimen/controlsPadding"
                        android:text="@string/house" />

                    <TextView
                        android:id="@+id/tvControlApartment"
                        style="@style/controlLabelStyle"
                        android:layout_weight="1"
                        android:background="@drawable/control_border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/controlsPadding"
                        android:paddingTop="@dimen/controlsPadding"
                        android:text="@string/apartment" />
                </LinearLayout>


                <TextView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tvTitle"
                    style="@style/labelStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/tell_us_about_your" />

                <RelativeLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/llLeftControl"
                        android:gravity="center"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/labelStyle"
                            android:layout_marginTop="16dp"
                            android:text="@string/amount_of_bedrooms" />

                        <com.peterstaranchuk.cleaningservice.custom_views.CounterView
                            android:id="@+id/cvBedroomsCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llRightControl"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/llLeftControl"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/labelStyle"
                            android:layout_marginTop="16dp"
                            android:text="@string/amount_of_bathrooms" />

                        <com.peterstaranchuk.cleaningservice.custom_views.CounterView
                            android:id="@+id/cvBathroomsCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp" />

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    style="@style/labelStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/area_in_square_foots" />

                <EditText
                    android:id="@+id/etSizeInSQF"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_size_of_your_house_in_square_foots"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_address" />

                <EditText
                    android:id="@+id/etAddress"
                    style="@style/editTextStyle"
                    android:hint="@string/enter_your_address" />

                <TextView
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/etContactPhone"
                    android:inputType="phone"
                    style="@style/editTextStyle"
                    android:hint="@string/enter_your_phone" />

                <!--<TextView-->
                    <!--android:visibility="gone"-->
                    <!--android:id="@+id/tvPrice"-->
                    <!--style="@style/labelStyle"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:text="@string/price_for_cleaning" />-->


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnMakeAnOrder"
            style="@style/button"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:text="@string/make_an_order" />

    </RelativeLayout>

    <include layout="@layout/side_menu" />


</android.support.v4.widget.DrawerLayout>

