<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_order_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout android:id="@+id/llUserSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        style="@style/order_info_linear_layout">

                        <TextView
                            style="@style/labelStyle"
                            android:text="@string/textUserPhone" />

                        <TextView
                            android:id="@+id/tvUserPhone"
                            style="@style/orderItemGray" />

                    </LinearLayout>


                    <RelativeLayout
                        style="@style/order_info_linear_layout">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/labelStyle"
                                android:text="@string/textUserAddress" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:id="@+id/tvUserAddress"
                                android:paddingRight="32dp"
                                style="@style/orderItemGray" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/delimiterColor" />

                <LinearLayout
                    android:id="@+id/llOrderSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout style="@style/order_info_linear_layout">

                        <TextView
                            style="@style/labelStyle"
                            android:text="@string/order_price" />

                        <TextView
                            android:id="@+id/tvOrderPrice"
                            style="@style/orderItemGray" />
                    </LinearLayout>

                    <LinearLayout style="@style/order_info_linear_layout">

                        <TextView
                            style="@style/labelStyle"
                            android:text="@string/placed_at" />

                        <TextView
                            android:id="@+id/tvPlacedAt"
                            style="@style/orderItemGray" />
                    </LinearLayout>


                    <LinearLayout style="@style/order_info_linear_layout">

                        <TextView
                            style="@style/labelStyle"
                            android:text="@string/textOrderStatus" />

                        <TextView
                            android:id="@+id/tvOrderStatus"
                            style="@style/orderItemGray" />
                    </LinearLayout>
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/delimiterColor" />



                <LinearLayout
                    android:id="@+id/llAdditionalInfoSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llAdditionalInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout style="@style/order_info_linear_layout">

                            <TextView
                                style="@style/labelStyle"
                                android:text="@string/numberOfBedrooms" />

                            <TextView
                                android:id="@+id/tvNumberOfBedrooms"
                                style="@style/orderItemGray" />
                        </LinearLayout>

                        <LinearLayout style="@style/order_info_linear_layout">

                            <TextView
                                style="@style/labelStyle"
                                android:text="@string/numberOfBathrooms" />

                            <TextView
                                android:id="@+id/tvNumberOfBathrooms"
                                style="@style/orderItemGray" />
                        </LinearLayout>

                        <LinearLayout style="@style/order_info_linear_layout">

                            <TextView
                                style="@style/labelStyle"
                                android:text="@string/area" />

                            <TextView
                                android:id="@+id/tvArea"
                                style="@style/orderItemGray" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/vDelimiter"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/delimiterColor" />

                <Button
                    android:id="@+id/btnRemoveOrder"
                    style="@style/button"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/removeOrder" />

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </ScrollView>

    <include layout="@layout/side_menu"/>

</android.support.v4.widget.DrawerLayout>
